--- a/client/src/assets/scss/_announcement.scss
+++ b/client/src/assets/scss/_announcement.scss
@@ -1,22 +1,27 @@
 /** @format */
 
-.header-alert-news {
-	color: white;
+.header-top {
+	background-color: rgb(0, 30, 60);
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	font-size: 16px;
 	font-weight: 500;
 	// position: fixed;
+	justify-content: space-between;
+	z-index: 100;
 	width: 100%;
-	height: 40px;
+	height: 60px;
+	padding: 10px 0 0 0;
 }
 
-.header-top {
-	background-color: rgb(0, 30, 60);
-	align-items: center;
-	text-align: center;
+.header-social-container {
+	flex: 1;
+	margin-left: 20px;
+}
+.header-alert-news {
+	color: white;
 	display: flex;
+	flex: 2;
+	justify-content: center;
 }
 
 #time {
@@ -30,6 +35,22 @@
 	width: 100px;
 	height: 40px;
 	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#time .divider1 {
+	position: relative;
+	display: flex;
+	font-size: 30px;
+	justify-content: center;
+	align-items: center;
+}
+
+#time .divider2 {
+	position: relative;
+	display: flex;
+	font-size: 30px;
 	justify-content: center;
 	align-items: center;
 }
